[package]
name = "luna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { default-features=false, features = ["client", "gateway", "rustls_backend", "model", "voice", "cache"]}
songbird = "0.3.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"]}
